# vol-rados

./: .clang-format  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  CTestConfig.cmake  README.md  TODO.org  ci.sh  ci2.sh  config.json  config2.json
.github/workflows/: develop.yml  ior.yml  ior2.yml  ior_chogan.yml  spack_bedrock.yml  spell.yml
CMake/: FindMOBJECT.cmake  FindRADOS.cmake  Hdf5VolRadosDetermineVersion.cmake  hdf5_vol_rados-config-version.cmake.in  hdf5_vol_rados-config.cmake.build.in  hdf5_vol_rados-config.cmake.install.in  hdf5_vol_rados.pc.in
examples/: BuildExamples.cmake  CMakeLists.txt  h5rados_dset_create.c  h5rados_dset_open.c  h5rados_dset_read.c  h5rados_dset_rpartial.c  h5rados_dset_rss.c  h5rados_dset_wpartial.c  h5rados_dset_write.c  h5rados_dset_wss.c  h5rados_example.h  h5rados_file_create.c  h5rados_file_open.c  h5rados_group_create.c  h5rados_group_open.c  run_mobject_examples.sh  run_rados_examples.sh
src/: CMakeLists.txt  H5VLerror.h  H5VLrados.c  H5VLrados.h  H5VLrados_config.h.in  H5VLrados_public.h  H5VLselect.c  H5VLselect.h
test/: CMakeLists.txt
test/scripts/: hdf5_vol_rados_common.cmake  init-env-mobject.sh  init-env-rados.sh  jelly_build.sh  jelly_script.cmake
